Fix based on review comments